--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ baseurl:
 url: https://mino0885.github.io/
 date_format: "ordinal"
 title: Mino
-subtitle: Mino的博客
-description: Mino的博客
+subtitle: Mino的site
+description: Mino的site
 keywords: 
 favicon: /favicon.ico
 timezone: Asia/Beijing
